// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByDate Reducer Test append = false 1`] = `
Object {
  "anticheatStatistics": Array [
    3,
    4,
  ],
  "nextPageToken": "CAE",
}
`;

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByDate Reducer Test append = true 1`] = `
Object {
  "anticheatStatistics": Array [
    1,
    2,
    3,
    4,
  ],
  "nextPageToken": "CAE",
}
`;

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByDate Reducer handle ANTICHEAT_STATISTICS_FETCH_SUCCESS: anticheatStatistics and nextPagetoken assignation 1`] = `
Object {
  "anticheatStatistics": Array [
    Object {
      "correct": "22",
      "date": 1531180800,
      "failures": "4",
      "percentCorrect": "47",
      "punishments": "11",
      "unanswered": "0",
      "unexpected": "20",
    },
  ],
  "nextPageToken": "CAE",
}
`;

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByDate Reducer handle ANTICHEAT_STATISTICS_FETCH_SUCCESS: empty results 1`] = `
Object {
  "anticheatStatistics": Array [],
  "nextPageToken": null,
}
`;

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByDate Reducer return the initial state 1`] = `
Object {
  "anticheatStatistics": Array [],
  "nextPageToken": null,
}
`;
